@@ -14,9 +14,24 @@
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
-				<!-- <configuration> <server>local_tomcat</server> <url>http://localhost:9280/manager/text</url> 
-					<update>true</update> <port>9280</port> </configuration> -->
+				<configuration>
+					<path>/${project.build.finalName}</path>
+					<contextReloadable>true</contextReloadable>
+					<systemProperties>
+						<!-- <JAVA_OPTS>-Xmx1024m -Xms256m -XX:MaxPermSize=256m -Xdebug -Xnoagent 
+							-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000</JAVA_OPTS> 
+							<MAVEN_OPTS>="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"</MAVEN_OPTS> -->
+						<JAVA_OPTS>-Xms256m -Xmx1024m -XX:+DisableExplicitGC
+							-Dcom.sun.management.jmxremote -XX:PermSize=256m
+							-XX:MaxPermSize=512m</JAVA_OPTS>
+						<MAVEN_OPTS>-Xdebug -Xnoagent -Djava.compiler=NONE
+							-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000</MAVEN_OPTS>
+						export MAVEN_OPTS
+					</systemProperties>
+
+				</configuration>
 			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -24,6 +39,14 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+				<configuration>
+					<forkMode>never</forkMode>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -35,6 +58,7 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
